--- a/doc/src/manual/ch-simple-modules.tex
+++ b/doc/src/manual/ch-simple-modules.tex
@@ -685,6 +685,7 @@ the redundant constructor arguments can be removed.
 
 
 \subsection{"Garbage collection" and compatibility}
+\label{sec:garbage-collection}
 
 {\opp} versions before the 3.2 release had a feature which often was,
 informally and also somewhat incorrectly, called \textit{"garbage
