--- a/doc/src/manual/ch-simple-modules.tex
+++ b/doc/src/manual/ch-simple-modules.tex
@@ -573,7 +573,7 @@ no arguments:
 \cclass{cSimpleModule} itself has two constructors:
 \begin{enumerate}
   \item{\ttt{cSimpleModule()} -- one without arguments}
-  \item{\ttt{cSimpleModule(size_t stacksize)} -- one that accepts the coroutine
+  \item{\ttt{cSimpleModule(size\_t stacksize)} -- one that accepts the coroutine
         stack size\index{module!stack size}\index{stack!size}}
 \end{enumerate}
 
