*** empty log message ***

--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -216,7 +216,7 @@ Defaults: \textit{pos}="t", \textit{color}=blue}\\\hline
 {\raggedright Displays the given text in a tooltip when the user moves
 the mouse over the icon. This complements the \ttt{t=} tag, and
 lets you display more information that otherwise would not fit on the
-screen. {\new}}\\\hline
+screen. }\\\hline
 
 \end{longtable}
 
@@ -271,7 +271,7 @@ Defaults: \textit{fillcolor}=\#8080ff (a lightblue), \textit{outlinecolor}=black
 \tbf{tt=}\textit{tooltip-text}
 &
 {\raggedright Displays the given text in a tooltip when the user moves
-the mouse over the module name in the top-left corner. {\new}}\\\hline
+the mouse over the module name in the top-left corner. }\\\hline
 \end{longtable}
 
 
@@ -317,7 +317,7 @@ Defaults: \textit{color}=black, \textit{width}=2\\\hline
 &
 {\raggedright Displays a short text near the connection arrow.
 The text may convey status information or connection properties
-(\textit{"down"}, \textit{"100Mb"}) or statistics. {\new}
+(\textit{"down"}, \textit{"100Mb"}) or statistics.
 
 %FIXME todo insert: The string may contain \t, \n, \r, \f, \b, \x0A with same meaning as in C/C++
 
@@ -328,7 +328,7 @@ Defaults: \textit{color}=\#005030}\\\hline
 {\raggedright Displays the given text in a tooltip when the user moves
 the mouse over the connection arrow. This complements the \ttt{t=} tag, and
 lets you display more information that otherwise would not fit on the
-screen. {\new}}\\\hline
+screen. }\\\hline
 \end{longtable}
 
 
@@ -399,7 +399,7 @@ red solid circle will be used;
 \tbf{tt=}\textit{tooltip-text}
 &
 {\raggedright Displays the given text in a tooltip when the user moves
-the mouse over the message icon. {\new}}\\\hline
+the mouse over the message icon.}\\\hline
 
 \end{longtable}
 
