--- a/doc/src/manual/ch-ned-lang.tex
+++ b/doc/src/manual/ch-ned-lang.tex
@@ -1228,52 +1228,79 @@ or
 
 \subsection{XML documents and the XPath subset supported}
 
-\ttt{xmldoc()} with two arguments accepts an XPath-like expression
-to select an element within the document. This feature is meant to
-facilitate merging several smaller XML config files into a single larger
-one.
+\ttt{xmldoc()} with two arguments accepts a path expression
+to select an element within the document. The expression syntax is
+similar to XPath.
 
 If the expression matches several elements, the first element
-(in preorder depth-first traversal) will be selected.
+(in preorder depth-first traversal) will be selected. (This is
+unlike XPath, which selects all matching nodes.)
 
-Expression syntax is the following:
+The expression syntax is the following:
 
 \begin{itemize}
   \item An expression consists of \textit{path components} (or "steps")
         separated by "\ttt{/}" or "\ttt{//}".
   \item A path component can be an element tag name, "\ttt{*}", "\ttt{.}"
-        or "\ttt{..}". Element tag names and "\ttt{*}" can have an optional predicate
-        in the form "\ttt{[position]}" or "\ttt{[@attribute='value']}".
-        Positions start from zero.
+        or "\ttt{..}".
   \item "\ttt{/}" means child element (just as e.g. in \ttt{/usr/bin/gcc});
         "\ttt{//}" means an element any levels under the current element.
   \item "\ttt{.}", "\ttt{..}" and "\ttt{*}" mean current element,
         parent element, and an element with any tag name, respectively.
+  \item Element tag names and "\ttt{*}" can have an optional predicate
+        in the form "\ttt{[position]}" or "\ttt{[@attribute='value']}".
+        Positions start from zero.
+  \item Predicate of the form "\ttt{[@attribute=\textit{\$param}]}" are also
+        accepted, where \ttt{\textit{\$param}} can be one of:
+        \ttt{\$MODULE_FULLPATH}, \ttt{\$MODULE_FULLNAME}, \ttt{\$MODULE_NAME},
+        \ttt{\$MODULE_INDEX}, \ttt{\$MODULE_ID},
+        \ttt{\$PARENTMODULE_FULLPATH}, \ttt{\$PARENTMODULE_FULLNAME},
+        \ttt{\$PARENTMODULE_NAME}, \ttt{\$PARENTMODULE_INDEX}, \ttt{\$PARENTMODULE_ID},
+        \ttt{\$GRANDPARENTMODULE_FULLPATH}, \ttt{\$GRANDPARENTMODULE_FULLNAME},
+        \ttt{\$GRANDPARENTMODULE_NAME}, \ttt{\$GRANDPARENTMODULE_INDEX},
+        \ttt{\$GRANDPARENTMODULE_ID}.{\new}
 \end{itemize}
-
-These interpretations are consistent with the XPath specification.
-  \footnote{While the XPath specification defines other axes, alternative
-  axis syntax (using "::") and more powerful predicates, for our purposes
-  (finding elements in XML config files) the above support is sufficient.}
 
 Examples:
 
-% FIXME list becomes bold in HTML after a while
-
 \begin{itemize}
-  \item \ttt{/foo} -- the root element which must be called <foo>
-  \item \ttt{/foo/bar} -- first <bar> child of the <foo> root element
-  \item \ttt{//bar} -- first <bar> anywhere (depth-first search!)
-  \item \ttt{/*/bar} -- first <bar> child of the root element which may have any tag name
-  \item \ttt{/*/*/bar} -- first <bar> child two levels below the root element
-  \item \ttt{/*/foo[0]} -- first <foo> child of the root element
-  \item \ttt{/*/foo[1]} -- second <foo> child of the root element
-  \item \ttt{/*/foo[@color='green']} -- first <foo> child which has attribute "color" with value "green"
-  \item \ttt{//bar[1]} -- a <bar> element anywhere which is the second <bar> among its siblings
+  \item \ttt{/foo} -- the root element which must be called \ttt{<foo>}
+  \item \ttt{/foo/bar} -- first \ttt{<bar>} child of the \ttt{<foo>} root element
+  \item \ttt{//bar} -- first \ttt{<bar>} anywhere (depth-first search!)
+  \item \ttt{/*/bar} -- first \ttt{<bar>} child of the root element which may have any tag name
+  \item \ttt{/*/*/bar} -- first \ttt{<bar>} child two levels below the root element
+  \item \ttt{/*/foo[0]} -- first \ttt{<foo>} child of the root element
+  \item \ttt{/*/foo[1]} -- second \ttt{<foo>} child of the root element
+  \item \ttt{/*/foo[@color='green']} -- first \ttt{<foo>} child which has attribute "color" with value "green"
+  \item \ttt{//bar[1]} -- a \ttt{<bar>} element anywhere which is the second \ttt{<bar>} among its siblings
   \item \ttt{//*[@color='yellow']} -- any element anywhere which has attribute "color" with value "yellow"
-  \item \ttt{//*[@color='yellow']/foo/bar} -- first <bar> child of first <foo> child of a "yellow-colored" element anywhere
+  \item \ttt{//*[@color='yellow']/foo/bar} -- first \ttt{<bar>} child of first \ttt{<foo>} child of a "yellow-colored" element anywhere
 \end{itemize}
 
+Path support allows you put all your XML configuration into
+a single XML document, when you would otherwise end up with lots
+of small XML files. For example, consider the following \ttt{sample.xml}:
+
+\begin{verbatim}
+<?xml version="1.0" encoding="UTF-8"?>
+<root>
+    <traffic-profile id="low">
+        ...
+    </traffic-profile>
+    <traffic-profile id="medium">
+        ...
+    </traffic-profile>
+    <traffic-profile id="high">
+        ...
+    </traffic-profile>
+</root>
+\end{verbatim}
+
+In one simulation you can configure module parameters as
+\ttt{xmldoc("sample.xml", "//traffic-profile[@id='low']")};
+in another run as
+\ttt{xmldoc("sample.xml", "//traffic-profile[@id='medium']")},
+and so on.
 
 
 \subsection{Functions}
